--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     //h2
     runtimeOnly 'com.h2database:h2'
 
+    //redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'it.ozimov:embedded-redis:0.7.2'
+
     //jwt
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
